# OMPi

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  gen-version
compiler/: Makefile.am  Makefile.in  ast.c  ast.h  builder.c  builder.h  callgraph.c  callgraph.h  cfg.c  cfg.h  dfa.c  dfa.h  ompi.c  ompi.h  ompicc.c  ort.defs.head  ort.defs.tail  outline.c  outline.h  parser.c  parser.h  parser.y  scanner.c  scanner.h  scanner.l  symtab.c  symtab.h
compiler/ast/: ast_copy.c  ast_copy.h  ast_csource.c  ast_csource.h  ast_free.c  ast_free.h  ast_gv.c  ast_gv.h  ast_print.c  ast_print.h  ast_renlabs.c  ast_renlabs.h  ast_show.c  ast_show.h  ast_traverse.c  ast_traverse.h  ast_types.c  ast_types.h  ast_vars.c  ast_vars.h  ast_xform.c  ast_xform.h
compiler/omp/: x_arith.c  x_arith.h  x_arrays.c  x_arrays.h  x_cars.c  x_cars.h  x_clauses.c  x_clauses.h  x_decltarg.c  x_decltarg.h  x_for.c  x_for.h  x_map.c  x_map.h  x_parallel.c  x_parallel.h  x_reduction.c  x_reduction.h  x_sections.c  x_sections.h  x_shglob.c  x_shglob.h  x_single.c  x_single.h  x_target.c  x_target.h  x_task.c  x_task.h  x_teams.c  x_teams.h  x_thrpriv.c  x_thrpriv.h  x_types.c  x_types.h
compiler/oxt/: ox_xform.c  ox_xform.h
ompicc/: Makefile.am  Makefile.in  kernels.c  kernels.h  mapper.c  mapper.h  ompicc.c  ompicc.h
ompicc/mal/: mal.h  mal_graph.c  mal_graph.h  mal_parse.c  mal_scan.c  mal_scan.h
runtime/dev_epiphany/: Makefile.am  Makefile.in  checkit.sh
runtime/dev_epiphany/devrt/: MakeKernel.epiphany  Makefile.am  Makefile.in  atomic.c  barrier.c  barrier_init.c  chunk_dynamic.c  chunk_guided.c  chunk_static.c  com.c  critical.c  device.c  device.h  device_globals.h  epiphany.c  executetasks.c  for.c  icvs_omp.c  init_ws.c  locks.c  newtask.c  omp.c  ompi_internal.ldf  ordered.c  othr.c  parallel.c  reduction.c  sections.c  shared_data.h  single.c  tasks.c  taskwait.c  ws.c
runtime/dev_epiphany/hostmodule/: Makefile.am  Makefile.in  esdkversion.sh  loader.c  loader.h  mmain.c  mmain.h  shareddata.h
runtime/devices/DeviceTemplate/: Makefile.am  checkit.sh
runtime/devices/DeviceTemplate/devpart/: MakeKernel.module-name  devpart.c
runtime/devices/DeviceTemplate/hostpart/: modmain.c
runtime/devices/epiphany3/: Makefile.am  Makefile.in  checkit.sh  rules.mal
runtime/devices/epiphany3/devpart-blockingws/: MakeKernel-blockingws.epiphany3  Makefile.am  Makefile.in  device.c  device.h  epiphany.c  icvs_omp.c  newtask.c  parallel.c  reduction.c  taskwait.c  ws.c
runtime/devices/epiphany3/devpart-blockingws-only-task-single/: MakeKernel-blockingws-only-task-single.epiphany3  Makefile.am  Makefile.in  device.h  epiphany.c  parallel.c  single.c  ws.c
runtime/devices/epiphany3/devpart-noexpltasks/: MakeKernel-noexpltasks.epiphany3  Makefile.am  Makefile.in  barrier.c  critical.c  device.h  epiphany.c  for.c  init_ws.c  locks.c  ordered.c  parallel.c
runtime/devices/epiphany3/devpart-noexpltasks-blockingws/: MakeKernel-noexpltasks-blockingws.epiphany3  Makefile.am  Makefile.in  chunk_guided.c  device.c  device.h  device_globals.h  init_ws.c  ompi_internal.ldf  parallel.c  sections.c  ws.c
runtime/devices/epiphany3/devpart-noopenmp/: MakeKernel-noopenmp.epiphany3  Makefile.am  Makefile.in  epiphany.c  shared_data.h
runtime/devices/epiphany3/devpart-only-atomic/: MakeKernel-only-atomic.epiphany3  Makefile.am  Makefile.in  atomic.c  device.c  device.h  device_globals.h  epiphany.c  icvs_omp.c  shared_data.h
runtime/devices/epiphany3/devpart-only-critical/: MakeKernel-only-critical.epiphany3  Makefile.am  Makefile.in  device.c  device.h  device_globals.h  epiphany.c  parallel.c  shared_data.h
runtime/devices/epiphany3/devpart-only-parallel/: MakeKernel-only-parallel.epiphany3  Makefile.am  Makefile.in  device.c  device.h  device_globals.h  epiphany.c  parallel.c  shared_data.h
runtime/devices/epiphany3/devpart-only-parallel-locks/: MakeKernel-only-parallel-locks.epiphany3  Makefile.am  Makefile.in  barrier_init.c  device.h  device_globals.h  epiphany.c  locks.c  shared_data.h
runtime/devices/epiphany3/devpart-only-parallel-reduction/: MakeKernel-only-parallel-reduction.epiphany3  Makefile.am  Makefile.in  barrier.c  device.c  device.h  device_globals.h  epiphany.c
runtime/devices/epiphany3/devpart-only-single/: MakeKernel-only-single.epiphany3  Makefile.am  Makefile.in  device.c  device.h  epiphany.c  init_ws.c  omp.c  parallel.c  shared_data.h  ws.c
runtime/devices/epiphany3/devpart-only-static-for/: MakeKernel-only-static-for.epiphany3  Makefile.am  Makefile.in  chunk_static.c  com.c  device.h  epiphany.c  init_ws.c  ws.c
runtime/devices/epiphany3/devpart-only-static-guided-dynamic-for/: MakeKernel-only-static-guided-dynamic-for.epiphany3  Makefile.am  Makefile.in  barrier.c  barrier_init.c  chunk_dynamic.c  device.c  device.h  device_globals.h  for.c  parallel.c
runtime/devices/epiphany3/devpart-only-static-ordered-for/: MakeKernel-only-static-ordered-for.epiphany3  Makefile.am  Makefile.in  device.h  icvs_omp.c  ordered.c  shared_data.h  ws.c
runtime/devices/epiphany3/devpart-only-tasks-1icv/: MakeKernel-only-tasks-1icv.epiphany3  Makefile.am  Makefile.in  device.c  device.h  device_globals.h  epiphany.c  (+3 more)
runtime/host/: Makefile.am  Makefile.in  affinity.c  barrier.c  cancel.c  dataenv.c  dataenv.h  env.c  hostdev.c  modules.c  omp.c  ort.c  ort.h  ort_prive.h  parallel.c  params.h  places.c  pools.c  reduction.c  stealing.c  sysdeps.c  sysdeps.h  targdenv.c  targdenv.h  target.c  taskdeps.c  tasks.c  taskspf.c  thrpriv.c  worksharing.c
runtime/host/LibraryTemplate/: Makefile.am  Makefile.in  Readme  [Optional]MakefileTemplate  [Optional]Makelib.conf  ee.h  ortconf.LibraryNameHere  othr.c
runtime/host/ee_process/: Makefile.am  Makefile.in  ee.h  oprc.c  ortconf.process
runtime/host/ee_psthr/: Makefile.am  Makefile.in  ee.h  ortconf.psthr  othr.c
runtime/host/ee_pthreads/: Makefile.am  Makefile.in  ee.h  ortconf.pthreads  othr.c
runtime/host/ee_torc/: Makefile.am  Makefile.in  ee.h  ortconf.torc  othr.c
(+79 files in other folders)
